fixed bug where MDB input was covered because of the backgroundColor, addBlog UI page and form done

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  background-color: #FCF6F5FF;
 }
 
-
-
+html {
+  background-color: #FCF6F5FF;
+}
