--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -28,7 +28,6 @@
     z-index: 2;
     left:0;
     width: 100%;
-    background-color: white;
     padding: 24px 0;
     top: 0;
     background-color: #FCF6F5FF;
