--- a/src/Containers/AddBlog/AddBlog.css
+++ b/src/Containers/AddBlog/AddBlog.css
@@ -2,16 +2,25 @@
     width: 100%;
     border-radius: 4px;
     height: 2em;
-    border-color: #89ABE3FF;;
+    border-color: #89ABE3FF;
+    ;
 }
-
 .btn {
     font-size: xx-large;
 }
 
-
 .btn-wrapper {
     display: flex;
     justify-content: center;
+}
+.form-wrapper {
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    padding: 2em;
+    max-width: 26em;
+    align-content: center;
 }
 
